samples/_failures_safe/1761467703_7a05d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2331fdaa.c: In function ‘main’:
./samples/SAFE/__tmp_2331fdaa.c:136:13: error: expected declaration or statement at end of input
  136 |             printf("\nEntries with level %s:\n", filter_level);
      |             ^~~~~~
./samples/SAFE/__tmp_2331fdaa.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2331fdaa.c:136:13: error: expected declaration or statement at end of input
